# ChangeLog for media-libs/flac
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/flac/ChangeLog,v 1.105 2007/02/14 11:08:16 flameeyes Exp $

*flac-1.1.4 (14 Feb 2007)

  14 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> +flac-1.1.4.ebuild:
  Version bump, hopefully this time API and ABI are the same as 1.1.3 at least.

  05 Feb 2007; Alexis Ballier <aballier@gentoo.org> flac-1.1.3.ebuild:
  Add gettext build depend, bug #159596

  04 Feb 2007; Steve Dibb <beandog@gentoo.org> flac-1.1.2-r8.ebuild:
  amd64 stable, bug 136490

  16 Jan 2007; Jeroen Roovers <jer@gentoo.org> flac-1.1.2-r8.ebuild:
  Stable for HPPA (bug #136490).

  12 Jan 2007; nixnut <nixnut@gentoo.org> flac-1.1.2-r8.ebuild:
  Stable on ppc wrt bug 136490

  11 Jan 2007; Christian Faulhammer <opfer@gentoo.org> flac-1.1.2-r8.ebuild:
  stable x86, bug #136490

  11 Jan 2007; Markus Rothe <corsair@gentoo.org> flac-1.1.2-r8.ebuild:
  Stable on ppc64; bug #136490

  10 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> flac-1.1.2-r8.ebuild:
  Stable on sparc wrt #136490

*flac-1.1.3 (03 Dec 2006)

  03 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> flac-1.1.2-r3.ebuild,
  flac-1.1.2-r8.ebuild, -flac-1.1.3_beta2.ebuild, +flac-1.1.3.ebuild:
  Bump to flac-1.1.3 final, fix AM_PATH_XMMS removal.

  25 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> flac-1.1.2-r3.ebuild,
  flac-1.1.2-r8.ebuild, flac-1.1.3_beta2.ebuild:
  Force the XMMS plugin disabled, now that XMMS is removed, see bug #156187.

  07 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> flac-1.1.2-r3.ebuild,
  flac-1.1.2-r8.ebuild, flac-1.1.3_beta2.ebuild:
  Remove xmms useflag in view of the removal of xmms later this month.

  19 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/flac-1.1.1-libtool.patch, -files/flac-1.1.1-m4.patch,
  -flac-1.1.1.ebuild, -flac-1.1.2-r7.ebuild:
  Remove old versions.

*flac-1.1.3_beta2 (19 Oct 2006)
