@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/flac/flac-1.1.2-r8.ebuild,v 1.11 2007/02/04 06:05:28 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/flac/flac-1.1.2-r8.ebuild,v 1.13 2007/02/24 20:30:08 aballier Exp $
 
 EAPI="prefix"
 
@@ -14,10 +14,10 @@ SRC_URI="mirror://sourceforge/flac/${P}.tar.gz
 
 LICENSE="GPL-2 LGPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86"
+KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86 ~x86-macos"
 IUSE="3dnow debug doc ogg sse"
 
-RDEPEND="ogg? ( >=media-libs/libogg-1.0_rc2 )"
+RDEPEND="ogg? ( >=media-libs/libogg-1.1.2 )"
 DEPEND="${RDEPEND}
 	x86? ( dev-lang/nasm )
 	sys-apps/gawk
@@ -44,12 +44,16 @@ src_unpack() {
 }
 
 src_compile() {
+	local myconf=""
+	[[ ${CHOST} == i?86-apple-darwin8 ]] && \
+		myconf="${myconf} --disable-asm-optimizations"
 	econf \
 		$(use_enable ogg) \
 		$(use_enable sse) \
 		$(use_enable 3dnow) \
 		$(use_enable debug) \
 		$(use_enable doc) \
+		$myconf \
 		--disable-dependency-tracking || die
 
 	# the man page ebuild requires docbook2man... yick!
